--- a/speakers/sampson.html
+++ b/speakers/sampson.html
@@ -82,7 +82,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; Andrew Amirov 2019, November </p>
 	</footer>
 </body>
 </html>
